syntax = "proto3";

option go_package = "biz/pb";

import "google/protobuf/timestamp.proto";

package authz_server;

service Biz {
  rpc GetUsers (GetUserRequest) returns (GetUserResponse) {}
  rpc GetUsersWithSQLInject (GetUserRequest) returns (GetUserResponse) {}
}

message GetUserRequest {
    string userID = 1;
    int32 auth_key = 2;
    int32 message_id = 3;
}

message GetUserResponse {
    repeated User users = 1;
    int32 message_id = 2;
}

message User {
    string name = 1;
    string surname = 2;
    string id = 3;
    int32 age = 4;
    string sex = 5;
    google.protobuf.Timestamp createdAt = 6;
}